# Copyright (C) 2016 Alexey Kopytov <akopytov@gmail.com>
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA

SUBDIRS = internal

dist_pkgdata_SCRIPTS = bulk_insert.lua \
             oltp_delete.lua \
             oltp_insert.lua \
             oltp_read_only.lua \
             oltp_read_write.lua \
             oltp_point_select.lua \
             oltp_update_index.lua \
             oltp_update_non_index.lua \
             oltp_write_only.lua\
             select_random_points.lua \
             select_random_ranges.lua

dist_pkgdata_DATA = oltp_common.lua
